<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- CARD PRODUTO -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/imageViewUrl"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="centerCrop"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textViewVendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#1C9603"
                    android:padding="6dp"
                    android:text="@string/vendedor"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/relativelayout_background"
                    android:paddingLeft="12dp"
                    android:paddingTop="3dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="3dp"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:id="@+id/imageViewMoney"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/money" />

                    <TextView
                        android:id="@+id/textViewValor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewMoney"
                        android:layout_toRightOf="@id/imageViewMoney"
                        android:text="@string/_0_00"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp">

                <TextView
                    android:id="@+id/textViewNomeProduto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batata"
                    android:textAllCaps="true"
                    android:textColor="#1A1A1A"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewDescProduto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewNomeProduto"
                    android:text="@string/legume_popular"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/textViewDescProduto"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="2dp"
                    android:text="@string/hortifruti"
                    android:textAllCaps="true"
                    android:textColor="@color/colorLink"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnValidade"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/shapes_formulario"
                android:backgroundTint="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/validade_da_oferta"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#414141" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>